<resources>
    <string name="app_name">シンプル</string>
    <string name="action_settings">Settings</string>

    <string name="default_mode_text">アイコンタップで起動したよ</string>

    <string name="recog_label_text">「今から喋るよ」って言ってね</string>
    <string name="eventname_text">--できごと名--</string>
    <string name="time_text">--いつ--</string>
    <string name="place_text">--どこで--</string>
    <string name="people_text">--だれが--</string>
    <string name="object_text">--何を--</string>
    <string name="event_text">--どうした--</string>

    <string name="button_voice_accost">accost</string>
    <string name="button_resolve_variable">resolve variable</string>
    <string name="button_finish_app">Finish App</string>
    <string name="button_get_memoryP">get_memory_p</string>
    <string name="button_set_memoryP">set_memory_p</string>

</resources>
